--- a/Movies.Web/Views/Movies/Index.cshtml
+++ b/Movies.Web/Views/Movies/Index.cshtml
@@ -1,13 +1,16 @@
-﻿@model Movies.Web.Models.Movies.SearchResults
-@{
-    ViewData["Title"] = "Movies List";
-}
-    <section class="movies" id="movies">
-        <h2>Featured Movies</h2>
-        <div class="row">
-            @foreach (var movie in Model.Results)
-            {
-                <partial name="MovieResult" model="movie" />
-            }
-            </div>
-    </section>
+﻿@model Movies.Web.Models.SearchResponse
+@{ ViewData["Title"] = "Movies List"; }
+
+<section>
+    <a class="btn btn-primary" href="@Url.Action("YourAction","YourController")">Click</a>
+</section>
+
+<section class="movies" id="movies">
+    <h2>Featured Movies</h2>
+    <div class="row">
+        @foreach (var movie in Model.Search)
+        {
+            <partial name="MovieResult" model="movie" />            
+        }
+    </div>
+</section>
