--- a/Movies.Web/wwwroot/css/site.css
+++ b/Movies.Web/wwwroot/css/site.css
@@ -69,3 +69,15 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.title-header {
+    min-height:50px;
+}
+
+.movie-card {
+    margin-bottom: 50px;
+}
+
+.img-card {
+    min-height: 400px;
+}
