--- a/Movies.Web/Views/Shared/_Layout.cshtml
+++ b/Movies.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,13 @@
 <body>
     <header>
 
+        @if (ViewBag.LdJsonObject != null)
+        {
+            <script type="application/ld+json">
+            @Html.Raw(ViewBag.LdJsonObject)
+            </script>
+        }
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
