Add url parameter for index

--- a/Movies.Web/Views/Movies/Index.cshtml
+++ b/Movies.Web/Views/Movies/Index.cshtml
@@ -2,7 +2,7 @@
 @{ ViewData["Title"] = "Movies List"; }
 
 <section>
-    <form method="post" asp-controller="Movies" asp-action="Index">
+    <form method="post" asp-controller="Movies" asp-action="Search">
 
         <div class="col-lg-12 col-md-12 col-sm-12">
             <h2>
